--- a/package.json
+++ b/package.json
@@ -8,7 +8,15 @@
     "start": "next start"
   },
   "dependencies": {
+    "@emotion/react": "^11.4.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.35",
+    "@fortawesome/free-brands-svg-icons": "^5.15.3",
+    "@fortawesome/free-solid-svg-icons": "^5.15.3",
+    "@fortawesome/react-fontawesome": "^0.1.14",
     "@hookform/resolvers": "^1.2.0",
+    "@react-google-maps/api": "^2.1.1",
+    "axios": "^0.21.1",
+    "bootstrap": "^5.0.0",
     "classnames": "2.2.6",
     "nanoid": "3.1.21",
     "next": "10.0.8",
@@ -16,6 +24,7 @@
     "react-dom": "17.0.1",
     "react-hook-form": "^6.15.4",
     "react-loader-spinner": "4.0.0",
+    "react-places-autocomplete": "^7.3.0",
     "sass": "1.32.8",
     "styled-components": "5.2.3",
     "yup": "^0.32.9"
