--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@fortawesome/react-fontawesome": "^0.1.14",
     "@hookform/resolvers": "^1.2.0",
+    "@popperjs/core": "^2.9.2",
     "@react-google-maps/api": "^2.1.1",
-    "bootstrap": "^5.0.0",
+    "bootstrap": "^5.0.0-beta3",
     "classnames": "2.2.6",
     "nanoid": "3.1.21",
     "next": "10.0.8",
     "react": "17.0.1",
+    "react-bootstrap": "^1.6.0",
     "react-dom": "17.0.1",
     "react-hook-form": "^6.15.4",
     "react-loader-spinner": "4.0.0",
