Prices requests correction / sulphur photo tab / last offers

--- a/package.json
+++ b/package.json
@@ -15,10 +15,11 @@
     "@hookform/resolvers": "^1.2.0",
     "@popperjs/core": "^2.9.2",
     "@react-google-maps/api": "^2.1.1",
-    "bootstrap": "^5.0.0-beta3",
+    "bootstrap": "^4.6.0",
     "classnames": "2.2.6",
     "nanoid": "3.1.21",
     "next": "10.0.8",
+    "popper.js": "^1.16.1",
     "react": "17.0.1",
     "react-bootstrap": "^1.6.0",
     "react-dom": "17.0.1",
