--- a/package.json
+++ b/package.json
@@ -15,13 +15,13 @@
     "@hookform/resolvers": "^1.2.0",
     "@popperjs/core": "^2.9.2",
     "@react-google-maps/api": "^2.1.1",
-    "background-image-on-load": "^1.1.0",
     "bootstrap": "^5.0.1",
     "classnames": "2.2.6",
     "embla-carousel": "^4.5.3",
     "moment": "2.29.1",
     "nanoid": "3.1.21",
     "next": "10.0.8",
+    "next-translate": "^1.0.7",
     "popper.js": "^1.16.1",
     "react": "17.0.1",
     "react-bootstrap": "^1.6.0",
